tests/snapshots/installer-screen__installation-progress.snap
---
source: src/tests/screens.rs
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 50 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "╭─ ⠙ Installing the operating system ──────────────────────────────────────────╮",
        "│                                                                              │",
        "│                                                                              │",
        "│   ███████████████████████████████████████████████████████████████████  42%   │",
        "│                                                                              │",
        "│                                                                              │",
        "│   Pulling manifest                                                           │",
        "│   Deploying ghcr.io/tectonic-os/deb2:latest                                  │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "╰─ disk being overwritten; log: /var/log/tect-installer.log ───────────────────╯",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: BOLD,
        x: 36, y: 5, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 8, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 8, fg: Rgb(92, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 8, fg: Rgb(94, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 8, fg: Rgb(96, 87, 225), bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 8, fg: Rgb(98, 87, 225), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 8, fg: Rgb(101, 87, 225), bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 8, fg: Rgb(103, 88, 226), bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 8, fg: Rgb(105, 88, 226), bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 8, fg: Rgb(107, 88, 226), bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 8, fg: Rgb(109, 89, 227), bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 8, fg: Rgb(112, 89, 227), bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 8, fg: Rgb(114, 90, 227), bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Rgb(116, 90, 228), bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: Rgb(118, 90, 228), bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 8, fg: Rgb(120, 91, 229), bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 8, fg: Rgb(123, 91, 229), bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 8, fg: Rgb(125, 91, 229), bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 8, fg: Rgb(127, 92, 230), bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 8, fg: Rgb(129, 92, 230), bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 8, fg: Rgb(131, 93, 230), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 8, fg: Rgb(134, 93, 231), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 8, fg: Rgb(136, 93, 231), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 8, fg: Rgb(138, 94, 231), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 8, fg: Rgb(140, 94, 232), bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 8, fg: Rgb(143, 94, 232), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 8, fg: Rgb(145, 95, 232), bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 8, fg: Rgb(147, 95, 233), bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 8, fg: Rgb(149, 96, 233), bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 76, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 22, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 23, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 24, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 25, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 26, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 26, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 27, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 27, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 28, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 28, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 29, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 29, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 30, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 30, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 31, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 31, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 32, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 32, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 33, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 33, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 34, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 34, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 35, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 35, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 36, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 36, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 37, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 37, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 38, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 38, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 39, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 39, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 40, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 40, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 41, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 41, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 41, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 41, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 42, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 42, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 76, y: 42, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 42, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 43, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 43, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 44, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 44, fg: Rgb(90, 86, 224), bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 45, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
